Update plugin build
Signed-off-by: Paolo Di Tommaso <paolo.ditommaso@gmail.com>

--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright 2021, Seqera Labs
+ * Copyright 2021-2022, Seqera Labs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -38,7 +38,7 @@ String now() {
 
 List<String> allPlugins() {
     def plugins = []
-    new File(rootProject.rootDir, 'plugins') .eachDir { if(it.name.startsWith('xpack-')) plugins.add(it.name) }
+    new File(rootProject.rootDir, 'plugins') .eachDir { if(it.name.startsWith('nf-')) plugins.add(it.name) }
     return plugins
 }
 
@@ -68,13 +68,16 @@ subprojects {
 
     version = metaFromManifest('Plugin-Version',file('src/resources/META-INF/MANIFEST.MF'))
 
+    tasks.withType(Jar) {
+        duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    }
+    
     /*
      * Creates plugin zip and json meta file in plugin `build/libs` directory
      */
     task makeZip(type: Jar) {
-        group 'nextflow'
         into('classes') { with jar }
-        into('lib') { from configurations.compile }
+        into('lib') { from configurations.runtimeClasspath }
         manifest.from file('src/resources/META-INF/MANIFEST.MF')
         archiveExtension = 'zip'
         preserveFileTimestamps = false
@@ -101,8 +104,7 @@ subprojects {
      * Copy the plugin dependencies in the subproject `build/target/libs` directory
      */
     task copyPluginLibs(type: Sync) {
-        group 'nextflow'
-        from configurations.compile
+        from configurations.runtimeClasspath
         into 'build/target/libs'
     }
 
@@ -110,8 +112,7 @@ subprojects {
      * Copy the plugin in the project root build/plugins directory
      */
     task copyPluginZip(type: Copy, dependsOn: project.tasks.findByName('makeZip')) {
-        group 'nextflow'
-        from project.tasks.findByName('makeZip')
+        from makeZip
         into "$rootProject.buildDir/plugins"
         outputs.file("$rootProject.buildDir/plugins/${project.name}-${project.version}.zip")
         doLast {
@@ -127,9 +128,7 @@ subprojects {
     */
     project.parent.tasks.getByName("assemble").dependsOn << copyPluginZip
 
-
     task uploadPlugin(type: io.nextflow.gradle.tasks.GithubUploader, dependsOn: makeZip) {
-        group 'nextflow'
         assets = providers.provider {["$buildDir/libs/${project.name}-${project.version}.zip",
                                       "$buildDir/libs/${project.name}-${project.version}-meta.json" ]}
         release = providers.provider { project.version }
@@ -146,3 +145,14 @@ task upload(dependsOn: [subprojects.uploadPlugin]) { }
 
 classes.dependsOn subprojects.copyPluginLibs
 
+/*
+ * Merge and publish the plugins index file
+ */
+task publishIndex( type: io.nextflow.gradle.tasks.GithubRepositoryPublisher ) {
+    indexUrl = 'https://github.com/nextflow-io/plugins/main/plugins.json'
+    repos = allPlugins()
+    owner = github_organization
+    githubUser = github_username
+    githubEmail = github_commit_email
+    githubToken = github_access_token
+}
