--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -96,6 +96,8 @@ subprojects {
                 "sha512sum": "${computeSha512(zip)}"
               }
             """.stripIndent()
+            // cleanup tmp dir
+            file("$buildDir/tmp/makeZip").deleteDir()
         }
         outputs.file("$buildDir/libs/${project.name}-${project.version}.zip")
     }
@@ -139,10 +141,28 @@ subprojects {
         skipExisting = true
     }
 
+    jar {
+        from sourceSets.main.allSource
+        doLast {
+            file("$buildDir/tmp/jar").deleteDir()
+        }
+    }
+
+    tasks.withType(GenerateModuleMetadata) {
+        enabled = false
+    }
+    
+    task upload(dependsOn: [uploadPlugin] ) { }
 }
 
+/*
+ * Upload all plugins to the corresponding GitHub repos
+ */
 task upload(dependsOn: [subprojects.uploadPlugin]) { }
 
+/*
+ * Copies the plugins required dependencies in the corresponding lib directory
+ */
 classes.dependsOn subprojects.copyPluginLibs
 
 /*
