--- a/plugins/nf-hello/build.gradle
+++ b/plugins/nf-hello/build.gradle
@@ -16,18 +16,13 @@
 
 plugins {
     // Apply the groovy plugin to add support for Groovy
-    id 'groovy'
+    id 'io.nextflow.groovy-library-conventions'
     id 'idea'
 }
 
 group = 'io.nextflow'
 // DO NOT SET THE VERSION HERE
 // THE VERSION FOR PLUGINS IS DEFINED IN THE `/resources/META-INF/MANIFEST.NF` file
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
-    }
-}
 
 idea {
     module.inheritOutputDirs = true
