--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: nf-hello CI
+name: nf-co2footprint CI
 on:
   push:
     branches:
@@ -10,7 +10,7 @@ on:
       - '*'
 jobs:
   build:
-    name: Build nf-hello
+    name: Build nf-co2footprint
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     runs-on: ubuntu-latest
     timeout-minutes: 10
