--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@
  * limitations under the License.
  */
 
-rootProject.name = 'nf-hello'
+rootProject.name = 'nf-co2footprint'
 include('plugins')
-include('plugins:nf-hello')
+include('plugins:nf-co2footprint')
+includeBuild('../nextflow')
