--- a/settings.gradle
+++ b/settings.gradle
@@ -17,4 +17,4 @@
 rootProject.name = 'nf-co2footprint'
 include('plugins')
 include('plugins:nf-co2footprint')
-includeBuild('../nextflow')
+//includeBuild('../nextflow')
