--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Docs / other
+.cache/
+.DS_Store
+
 # Ignore Gradle project-specific cache directory
 .gradle
 .idea
@@ -8,3 +12,4 @@ build
 work
 out
 co2footprint-*.txt
+site
