--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,23 +17,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java_version: [8, 11]
+        java_version: [11, 21]
 
     steps:
       - name: Environment
         run: env | sort
 
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
         with:
           fetch-depth: 1
           submodules: true
 
       - name: Setup Java ${{ matrix.java_version }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: ${{matrix.java_version}}
           architecture: x64
+          distribution: 'temurin'
 
       - name: Compile
         run: ./gradlew assemble
@@ -42,4 +43,3 @@ jobs:
         run: ./gradlew check
         env:
           GRADLE_OPTS: '-Dorg.gradle.daemon=false'
-
