Add configuration page
Signed-off-by: Till Englert <till.englert96@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
     - index.md
     - co2footprint.md
   - Usage:
+      - usage/configuration.md
       - usage/parameters.md
   - Contributing:
       - contributing/setup.md
