--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
   - Usage:
       - usage/configuration.md
       - usage/parameters.md
+      - usage/output.md
   - Contributing:
       - contributing/setup.md
 
