--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -33,4 +33,4 @@ jobs:
 
       - name: Summarize tests results
         uses: jeantessier/test-summary-action@v1
-        if: ${{ always() }}
+        if: ${{ always() && matrix.os == 'ubuntu-latest' }}
