--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -30,3 +30,7 @@ jobs:
       - name: Test with Gradle
         run: |
           ./gradlew test -i
+
+      - name: Summarize tests results
+        uses: jeantessier/test-summary-action@v1
+        if: ${{ always() }}
