--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,25 +12,26 @@ jobs:
   build:
     name: Build nf-co2footprint
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 10
     strategy:
       fail-fast: false
       matrix:
         java_version: [11, 21]
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
 
     steps:
       - name: Environment
         run: env | sort
 
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
           submodules: true
 
       - name: Setup Java ${{ matrix.java_version }}
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: ${{matrix.java_version}}
           architecture: x64
@@ -39,7 +40,15 @@ jobs:
       - name: Compile
         run: ./gradlew assemble
 
-      - name: Tests
+      - name: Check
         run: ./gradlew check
         env:
           GRADLE_OPTS: '-Dorg.gradle.daemon=false'
+
+      - name: Test
+        run: |
+          ./gradlew test -i
+
+      - name: Summarize tests results
+        uses: jeantessier/test-summary-action@v1
+        if: ${{ always() && matrix.os == 'ubuntu-latest' }}
