ci: More expressive of step names
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,10 @@ jobs:
         java_version: [11, 21]
 
     steps:
-      - name: Environment
+      - name: Check environment variables
         run: env | sort
 
-      - name: Checkout
+      - name: Checkout PR branch
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
@@ -36,10 +36,10 @@ jobs:
           architecture: x64
           distribution: 'temurin'
 
-      - name: Compile
+      - name: Compile plugin
         run: ./gradlew assemble
 
-      - name: Tests
+      - name: Execute checks / tests
         run: ./gradlew check
         env:
           GRADLE_OPTS: '-Dorg.gradle.daemon=false'
