--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,4 @@ jobs:
         run: ./gradlew assemble
 
       - name: Execute checks / tests
-        run: ./gradlew check
-        env:
-          GRADLE_OPTS: '-Dorg.gradle.daemon=false'
+        run: ./gradlew check --no-daemon
