--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,4 +40,4 @@ jobs:
         run: ./gradlew assemble
 
       - name: Execute checks / tests
-        run: ./gradlew check --no-daemon
+        run: ./gradlew check --no-daemon --info
