--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,12 @@
 .cache/
 .DS_Store
 
+# Ignore IDE specific files / directories
+.idea
+.vscode
+
 # Ignore Gradle project-specific cache directory
 .gradle
-.idea
 .nextflow*
 
 # Ignore Gradle build output directory
