--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   build:
     name: Build nf-co2footprint
-    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     runs-on: ubuntu-latest
     timeout-minutes: 10
     strategy:
@@ -20,10 +19,10 @@ jobs:
         java_version: [17, 23]
 
     steps:
-      - name: Environment
+      - name: Check environment variables
         run: env | sort
 
-      - name: Checkout
+      - name: Checkout PR branch
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
@@ -36,10 +35,12 @@ jobs:
           architecture: x64
           distribution: 'temurin'
 
-      - name: Compile
+      - name: Compile plugin
         run: ./gradlew assemble
 
-      - name: Tests
-        run: ./gradlew check
-        env:
-          GRADLE_OPTS: '-Dorg.gradle.daemon=false'
+      - name: Execute checks / tests
+        run: ./gradlew check --no-daemon --info
+
+      - name: Summarize tests results
+        uses: jeantessier/test-summary-action@v1
+        if: ${{ always() }}
