--- a/plugins/nf-co2footprint/build.gradle
+++ b/plugins/nf-co2footprint/build.gradle
@@ -52,7 +52,7 @@ sourceSets {
     main.resources.srcDirs = ['src/resources']
     test.groovy.srcDirs = ['src/test']
     test.java.srcDirs = []
-    test.resources.srcDirs = ['src/resources']
+    test.resources.srcDirs = ['src/testResources']
 }
 
 ext{
