Refactor: Updated naming of labels
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/.github/ISSUE_TEMPLATE/new_feature.yaml
+++ b/.github/ISSUE_TEMPLATE/new_feature.yaml
@@ -1,7 +1,7 @@
 name: Feature request
 description: Give us a suggestion on what to implement in future releases.
 title: "[Feature]: "
-labels: ["enhancement"]
+labels: ["💎 enhancement"]
 body:
   - type: markdown
     attributes:
