--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: File a report about something that went wrong.
 title: "[Bug]: "
-labels: ["bug", "triage"]
+labels: ["🪲 bug"]
 body:
   - type: markdown
     attributes:
