--- a/plugins/nf-co2footprint/build.gradle
+++ b/plugins/nf-co2footprint/build.gradle
@@ -94,4 +94,7 @@ dependencies {
 // use JUnit 5 platform
 test {
     useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+    }
 }
