--- a/plugins/nf-co2footprint/build.gradle
+++ b/plugins/nf-co2footprint/build.gradle
@@ -55,22 +55,27 @@ sourceSets {
     test.resources.srcDirs = ['src/testResources']
 }
 
+// Versioning of important packages
 ext{
-    nextflowVersion = '24.08.0-edge'
+    nextflowVersion = '24.10.5'
 }
+
+String groovyVersion = '4.0.26'
+String pf4jVersion = '3.13.0'
+String slf4jVersion = '2.0.17'
 
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     compileOnly "io.nextflow:nextflow:$nextflowVersion"
-    compileOnly 'org.slf4j:slf4j-api:1.7.10'
-    compileOnly 'org.pf4j:pf4j:3.4.1'
-    // add here plugins depepencies
+    compileOnly "org.slf4j:slf4j-api:$slf4jVersion"
+    compileOnly "org.pf4j:pf4j:$pf4jVersion"
+
+    // add here plugins dependencies
 
     // test configuration
-    testImplementation "org.apache.groovy:groovy:4.0.18"
-    testImplementation "org.apache.groovy:groovy-nio:4.0.18"
+    testImplementation "org.apache.groovy:groovy-nio:$groovyVersion"
     testImplementation "io.nextflow:nextflow:$nextflowVersion"
-    testImplementation ("org.apache.groovy:groovy-test:4.0.18") { exclude group: 'org.apache.groovy' }
+    testImplementation ("org.apache.groovy:groovy-test:$groovyVersion") { exclude group: 'org.apache.groovy' }
     testImplementation ("cglib:cglib-nodep:3.3.0")
     testImplementation ("org.objenesis:objenesis:3.1")
     testImplementation ("org.spockframework:spock-core:2.3-groovy-4.0") { exclude group: 'org.apache.groovy'; exclude group: 'net.bytebuddy' }
