--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,14 @@
 site_name: nf-co2footprint
+site_url: https://nextflow-io.github.io/nf-co2footprint/
+
 repo_name: nextflow-io/nf-co2footprint
 repo_url: https://github.com/nextflow-io/nf-co2footprint
-site_url: https://nextflow-io.github.io/nf-co2footprint/
 edit_uri: edit/master/docs/
 
 nav:
-  - Home: 
-    - index.md
-    - co2footprint.md
+  - Home:
+      - index.md
+      - co2footprint_calculation.md
   - Usage:
       - usage/configuration.md
       - usage/parameters.md
@@ -21,7 +22,6 @@ theme:
     logo: octicons/cloud-16
     repo: fontawesome/brands/github
   palette:
-    # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: green
@@ -29,7 +29,6 @@ theme:
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
-    # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: green
@@ -49,6 +48,8 @@ theme:
     - navigation.sections
     - search.share
     - toc.follow
+    - tabs  # replaces alternate_style
+    - tabs.sticky  # optional enhancement
 
 extra_javascript:
   - javascripts/mathjax.js
@@ -60,16 +61,15 @@ markdown_extensions:
   - def_list
   - md_in_html
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:pymdownx.emoji.twemoji
+      emoji_generator: !!python/name:pymdownx.emoji.to_svg
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
   - pymdownx.critic
   - pymdownx.snippets
   - pymdownx.superfences
-  - pymdownx.tabbed:
-      alternate_style: true
+  - pymdownx.tabbed
   - pymdownx.details
   - pymdownx.tasklist:
       custom_checkbox: true
@@ -78,5 +78,3 @@ markdown_extensions:
 
 plugins:
   - search
-  - social:
-      cards: !ENV [CARDS, true]
