--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -138,7 +138,7 @@ body:
           </details>
         </details>
       placeholder: |
-        - Plugin version: 1.0.0-beta
+        - Plugin version: 1.0.0-rc
         - Nextflow version: 25.8.0-edge
         - Java version: openjdk 17.0.14
         - Groovy version: 4.0.25 JVM: 17.0.11
