Chore: Added gradle.properties to gitignore to ensure secret tokens can be provided without accidental commit
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,5 @@ site
 # Ignore Python virtual environment
 venv/
 
-Todo.txt
+# Ignore gradle.properties which may contain GitHub Tokens
+gradle.properties
