Fix: Moved pattern layout to groovy code and limited scope to only affect the plugin
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/build.gradle
+++ b/plugins/nf-co2footprint/build.gradle
@@ -43,7 +43,7 @@ repositories {
 
 configurations {
     // see https://docs.gradle.org/4.1/userguide/dependency_management.html#sub:exclude_transitive_dependencies
-    //runtimeClasspath.exclude group: 'org.slf4j', module: 'slf4j-api'
+    runtimeClasspath.exclude group: 'org.slf4j', module: 'slf4j-api'
 }
 
 sourceSets {
@@ -56,10 +56,9 @@ sourceSets {
 }
 
 // Versioning of important packages
-ext{
+ext {
     nextflowVersion = '24.10.5'
 }
-
 String groovyVersion = '4.0.26'
 String pf4jVersion = '3.13.0'
 String slf4jVersion = '2.0.17'
@@ -76,19 +75,18 @@ dependencies {
     testImplementation "org.apache.groovy:groovy-nio:$groovyVersion"
     testImplementation "io.nextflow:nextflow:$nextflowVersion"
     testImplementation ("org.apache.groovy:groovy-test:$groovyVersion") { exclude group: 'org.apache.groovy' }
-    testImplementation ("cglib:cglib-nodep:3.3.0")
-    testImplementation ("org.objenesis:objenesis:3.1")
-    testImplementation ("org.spockframework:spock-core:2.3-groovy-4.0") { exclude group: 'org.apache.groovy'; exclude group: 'net.bytebuddy' }
+    testImplementation ('cglib:cglib-nodep:3.3.0')
+    testImplementation ('org.objenesis:objenesis:3.1')
+    testImplementation ('org.spockframework:spock-core:2.3-groovy-4.0') { exclude group: 'org.apache.groovy'; exclude group: 'net.bytebuddy' }
     testImplementation ('org.spockframework:spock-junit4:2.3-groovy-4.0') { exclude group: 'org.apache.groovy'; exclude group: 'net.bytebuddy' }
     testImplementation ('com.google.jimfs:jimfs:1.1')
-    implementation 'ch.qos.logback:logback-classic:1.2.12'
 
     testImplementation(testFixtures("io.nextflow:nextflow:$nextflowVersion"))
     testImplementation(testFixtures("io.nextflow:nf-commons:$nextflowVersion"))
 
     // see https://docs.gradle.org/4.1/userguide/dependency_management.html#sec:module_replacement
     modules {
-        module("commons-logging:commons-logging") { replacedBy("org.slf4j:jcl-over-slf4j") }
+        module('commons-logging:commons-logging') { replacedBy('org.slf4j:jcl-over-slf4j') }
     }
 }
 
