Refactor: Slight logger changes to remove Slf4j from Logger classes
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/build.gradle
+++ b/plugins/nf-co2footprint/build.gradle
@@ -18,6 +18,7 @@ plugins {
     // Apply the groovy plugin to add support for Groovy
     id 'io.nextflow.groovy-library-conventions'
     id 'idea'
+    id 'groovy'
 }
 
 group = 'io.nextflow'
