Fix: fixed .gitignore to include co2footprint_... files
Documentation: Implemented requested changes into README.md
Signed-off-by: Josua Carl <josua.carl@uni-tuebingen.de>

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@
 build
 work
 out
-co2footprint_*.txt
-co2footprint_*.html
+./co2footprint_*.txt
+./co2footprint_*.html
 site
 
 # Ignore Python virtual environment
