--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
       - usage/configuration.md
       - usage/parameters.md
       - usage/output.md
+      - usage/FAQ.md
   - Contributing:
       - contributing/setup.md
       - contributing/guidelines.md
@@ -77,6 +78,7 @@ markdown_extensions:
       custom_checkbox: true
   - pymdownx.arithmatex:
       generic: true
+  - attr_list
 
 plugins:
   - search
