Documentation: Added extension usage to the docs
Signed-off-by: Josua Carl <josua.carl@uni-tuebingen.de>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
       - usage/parameters.md
       - usage/output.md
       - usage/FAQ.md
+      - usage/extension.md
   - Contributing:
       - contributing/setup.md
       - contributing/guidelines.md
