Fix: Fixed extension point not found and file creation errors
Signed-off-by: Josua Carl <josua.carl@uni-tuebingen.de>

--- a/build.gradle
+++ b/build.gradle
@@ -103,7 +103,8 @@ nextflowPlugin {
     provider = 'nextflow'
     className = 'nextflow.co2footprint.CO2FootprintPlugin'
     extensionPoints = [
-            'nextflow.co2footprint.CO2FootprintFactory'
+            'nextflow.co2footprint.CO2FootprintFactory',
+            'nextflow.co2footprint.CO2FootprintExtension'
     ]
 
 }
