Chore: Bumped version from 1.0.0 to 1.1.0
Test: Adjusted tests accordingly
Signed-off-by: Josua Carl <josua.carl@uni-tuebingen.de>

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -138,7 +138,7 @@ body:
           </details>
         </details>
       placeholder: |
-        - Plugin version: 1.0.0-rc
+        - Plugin version: 1.1.0
         - Nextflow version: 25.8.0-edge
         - Java version: openjdk 17.0.14
         - Groovy version: 4.0.25 JVM: 17.0.11
