--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,11 +39,10 @@ jobs:
         run: ./gradlew assemble
 
       - name: Execute checks / tests
-        run: ./gradlew check --no-daemon --info
-        continue-on-error: true
+        run: ./gradlew check --no-daemon --info || echo "exit_code=$?" >> $GITHUB_OUTPUT
 
       - name: Upload test and check reports
-        if: ${{ always() }}
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: gradle-check-reports_${{ matrix.java_version }}
@@ -52,5 +51,11 @@ jobs:
             **/build/test-results/
 
       - name: Summarize tests results
+        if: always()
         uses: jeantessier/test-summary-action@v1
-        if: ${{ always() }}
+
+      - name: Fail if Gradle check failed
+        if: ${{ steps.gradle.outputs.exit_code }}
+        run: |
+          echo "Gradle check failed with exit code ${{ steps.gradle.outputs.exit_code }}"
+          exit ${{ steps.gradle.outputs.exit_code }}
