CI: Fixed successful tests on fail
Signed-off-by: Josua Carl <josua.carl@uni-tuebingen.de>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,5 +58,5 @@ jobs:
       - name: Fail if Gradle check failed
         if: ${{ steps.gradle.outputs.exit_code }}
         run: |
-          echo "Gradle check failed with exit code ${{ steps.gradle.outputs.exit_code }}"
+          echo "Gradle check failed with exit code `${{ steps.gradle.outputs.exit_code }}`. See GitHub Artifacts for a comprehensive report."
           exit ${{ steps.gradle.outputs.exit_code }}
